bk_ida/gobmkida/g2/iterate_tgfsr
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/iterate_tgfsr/src/utils/random.c:558:10: error: use of undeclared identifier 'unk_B9EF84'
while ( &unk_B9EF84 != ( _UNKNOWN *)v2 ); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/iterate_tgfsr/src/obj/5/random.o] Error 1
